Fix CORS: support wildcard * and fallback to localhost